--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -1,30 +1,37 @@
+html {
+  -webkit-font-smoothing: antialiased;
+}
 
-html { -webkit-font-smoothing: antialiased; }
 header {
-    background: #fff;
-    font-size: 10px;
+  background: #fff;
+  font-size: 10px;
 }
 
 body {
-		-webkit-font-smoothing: antialiased;
-    font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
-    color: #3F4743;
-    line-height: 1.6;
-    word-wrap: break-word;
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
+  color: #3F4743;
+  line-height: 1.6;
+  word-wrap: break-word;
 }
 
 
-/* Github Markdown Stylesheet from https://gist.github.com/tuzz/3331384 */
-body > *:first-child {
+
+/*
+title: Github Markdown Stylesheet
+author: Chris Patuzzo
+available at: https://gist.github.com/tuzz/3331384
+*/
+body > :first-child {
   margin-top: 0 !important;
 }
 
-body > *:last-child {
+body > :last-child {
   margin-bottom: 0 !important;
 }
 
 i {
-	font-family: fontawesome;
+  font-family: fontawesome;
 }
 
 a {
@@ -33,7 +40,7 @@ a {
 }
 
 a.absent {
-  color: #cc0000;
+  color: #c00;
 }
 
 a.anchor {
@@ -47,66 +54,72 @@ a.anchor {
   bottom: 0;
 }
 
-h1, h2, h3 {
+h1,h2,h3 {
   margin: 20px 0 10px;
   padding: 0;
   font-weight: 100;
   cursor: text;
   position: relative;
-	font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
-  font-weight: normal;
+  font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
+  font-weight: 400;
 }
 
-h4, h5, h6 {
-	margin: 20px 0 10px;
+h4,h5,h6 {
+  margin: 20px 0 10px;
   padding: 0;
   font-weight: 500;
   cursor: text;
   position: relative;
-	font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+  font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
 }
-h2:first-child, h1:first-child, h1:first-child + h2, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+
+h2:first-child,h1:first-child,h1:first-child + h2,h3:first-child,h4:first-child,h5:first-child,h6:first-child {
   margin-top: 0;
   padding-top: 0;
 }
 
-h1:hover a.anchor, h2:hover a.anchor, h3:hover a.anchor, h4:hover a.anchor, h5:hover a.anchor, h6:hover a.anchor {
+h1:hover a.anchor,h2:hover a.anchor,h3:hover a.anchor,h4:hover a.anchor,h5:hover a.anchor,h6:hover a.anchor {
   text-decoration: none;
 }
 
-h1 tt, h1 code {
+h1 tt,h1 code {
   font-size: inherit;
 }
 
-h2 tt, h2 code {
+h2 tt,h2 code {
   font-size: inherit;
 }
 
-h3 tt, h3 code {
+h3 tt,h3 code {
   font-size: inherit;
 }
 
-h4 tt, h4 code {
+h4 tt,h4 code {
   font-size: inherit;
 }
 
-h5 tt, h5 code {
+h5 tt,h5 code {
   font-size: inherit;
 }
 
-h6 tt, h6 code {
+h6 tt,h6 code {
   font-size: inherit;
 }
 
 h1 {
-  font-size: 30px;
-	text-align: center;
-	padding-top: 1em;
+  font-size: 26px;
+  text-align: center;
+  padding-top: .6em;
 }
 
+@media only screen and (max-width: 550px) {
+  h1 {
+    padding-top: 1em;
+  }
+}
 
 h2 {
-  font-size: 24px;
+  font-size: 20px;
   border-bottom: 1px solid #eee;
 }
 
@@ -123,18 +136,19 @@ h5 {
 }
 
 h6 {
-  color: #777777;
+  color: #777;
   font-size: 12px;
 }
 
-p, blockquote, ul, ol, dl, li, table, pre {
+p,blockquote,ul,ol,dl,li,table,pre {
   margin: 16px 0;
   width: 100%;
+  font-size: 14px;
 }
 
 hr {
   border: 0 none;
-  color: #cccccc;
+  color: #ccc;
   height: 4px;
   padding: 0;
 }
@@ -154,17 +168,17 @@ body > h1:first-child + h2 {
   padding-top: 0;
 }
 
-body > h3:first-child, body > h4:first-child, body > h5:first-child, body > h6:first-child {
+body > h3:first-child,body > h4:first-child,body > h5:first-child,body > h6:first-child {
   margin-top: 0;
   padding-top: 0;
 }
 
-a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h5, a:first-child h6 {
+a:first-child h1,a:first-child h2,a:first-child h3,a:first-child h4,a:first-child h5,a:first-child h6 {
   margin-top: 0;
   padding-top: 0;
 }
 
-h1 p, h2 p, h3 p, h4 p, h5 p, h6 p {
+h1 p,h2 p,h3 p,h4 p,h5 p,h6 p {
   margin-top: 0;
 }
 
@@ -172,15 +186,15 @@ li p.first {
   display: inline-block;
 }
 
-ul, ol {
+ul,ol {
   padding-left: 30px;
 }
 
-ul :first-child, ol :first-child {
+ul :first-child,ol :first-child {
   margin-top: 0;
 }
 
-ul :last-child, ol :last-child {
+ul :last-child,ol :last-child {
   margin-bottom: 0;
 }
 
@@ -190,7 +204,7 @@ dl {
 
 dl dt {
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 700;
   font-style: italic;
   padding: 0;
   margin: 15px 0 5px;
@@ -222,16 +236,17 @@ dl dd > :last-child {
 }
 
 blockquote {
-  border-left: 4px solid #dddddd;
+  border-left: 4px solid #ddd;
   padding: 0 15px;
-  color: #777777;
+  color: #777;
 }
 
 blockquote:before {
-    content: "";
+  content: "";
 }
+
 blockquote:after {
-    content: "";
+  content: "";
 }
 
 blockquote > :last-child {
@@ -242,9 +257,10 @@ table {
   padding: 0;
   max-width: 100%;
 }
+
 table tr {
-  border-top: 1px solid #cccccc;
-  background-color: white;
+  border-top: 1px solid #ccc;
+  background-color: #fff;
   margin: 0;
   padding: 0;
 }
@@ -254,25 +270,25 @@ table tr:nth-child(2n) {
 }
 
 table tr th {
-  font-weight: bold;
-  border: 1px solid #cccccc;
+  font-weight: 700;
+  border: 1px solid #ccc;
   text-align: left;
   margin: 0;
   padding: 6px 13px;
 }
 
 table tr td {
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   text-align: left;
   margin: 0;
   padding: 6px 13px;
 }
 
-table tr th :first-child, table tr td :first-child {
+table tr th :first-child,table tr td :first-child {
   margin-top: 0;
 }
 
-table tr th :last-child, table tr td :last-child {
+table tr th :last-child,table tr td :last-child {
   margin-bottom: 0;
 }
 
@@ -286,7 +302,7 @@ span.frame {
 }
 
 span.frame > span {
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   display: block;
   float: left;
   overflow: hidden;
@@ -302,7 +318,7 @@ span.frame span img {
 
 span.frame span span {
   clear: both;
-  color: #333333;
+  color: #333;
   display: block;
   padding: 5px 0 0;
 }
@@ -368,7 +384,7 @@ span.float-right > span {
   text-align: right;
 }
 
-code, tt {
+code,tt {
   margin: 0 2px;
   padding: 0 5px;
   white-space: nowrap;
@@ -387,7 +403,7 @@ pre code {
 
 .hljs pre {
   background-color: #f8f8f8;
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   font-size: 13px;
   line-height: 19px;
   overflow: auto;
@@ -404,75 +420,51 @@ pre {
   border-radius: 3px;
 }
 
-pre code, pre tt {
+pre code,pre tt {
   background-color: transparent;
   border: none;
 }
+
 /*
-
 Style with support for rainbow parens
-
 */
-
 .hljs {
   display: block;
   overflow-x: auto;
-  padding: 0.5em;
+  padding: .5em;
   color: #a3b3c3;
 }
 
-
-.hljs-comment,
-.hljs-quote {
+.hljs-comment,.hljs-quote {
   color: #969896;
   font-style: italic;
 }
 
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-literal,
-.hljs-type,
-.hljs-addition {
-  color: #cc99cc;
+.hljs-keyword,.hljs-selector-tag,.hljs-literal,.hljs-type,.hljs-addition {
+  color: #c9c;
 }
 
-.hljs-number,
-.hljs-selector-attr,
-.hljs-selector-pseudo {
+.hljs-number,.hljs-selector-attr,.hljs-selector-pseudo {
   color: #f99157;
 }
 
-.hljs-string,
-.hljs-doctag,
-.hljs-regexp {
+.hljs-string,.hljs-doctag,.hljs-regexp {
   color: #8abeb7;
 }
 
-.hljs-title,
-.hljs-name,
-.hljs-section,
-.hljs-built_in {
+.hljs-title,.hljs-name,.hljs-section,.hljs-built_in {
   color: #b5bd68;
 }
 
-.hljs-variable,
-.hljs-template-variable,
-.hljs-selector-id,
-.hljs-class .hljs-title {
-   color: #ffcc66;
+.hljs-variable,.hljs-template-variable,.hljs-selector-id,.hljs-class .hljs-title {
+  color: #fc6;
 }
 
-.hljs-section,
-.hljs-name,
-.hljs-strong {
-  font-weight: bold;
+.hljs-section,.hljs-name,.hljs-strong {
+  font-weight: 700;
 }
 
-.hljs-symbol,
-.hljs-bullet,
-.hljs-subst,
-.hljs-meta,
-.hljs-link {
+.hljs-symbol,.hljs-bullet,.hljs-subst,.hljs-meta,.hljs-link {
   color: #f99157;
 }
 
@@ -484,8 +476,7 @@ Style with support for rainbow parens
   background: #eee8d5;
 }
 
-.hljs-attr,
-.hljs-attribute {
+.hljs-attr,.hljs-attribute {
   color: #81a2be;
 }
 
