revise mobile col

--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -8,7 +8,7 @@
 </section>
 <article class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="post-card mdl-cell mdl-cell--8-col">
+  <div class="post-card mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet mdl-cell--12-col-phone">
   <div class="post-card_body">
     <div class="post-card_main-image">
       <img itemprop="image" src="{{ post.image.url }}" >
@@ -62,7 +62,7 @@
 </article>
 <div class="comment-entry mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="post-card mdl-cell mdl-cell--8-col">
+  <div class="post-card mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet mdl-cell--12-col-phone">
     <div class="disqus" id="disqus_thread"></div>
   </div>
 </div>
